--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,15 +37,21 @@ jobs:
           sudo mv arduino-cli /usr/local/bin/
           arduino-cli config init
 
-      # Install Arduino AVR core and libraries
-      - name: Install Arduino AVR core and libraries
+      # Add ESP8266 board manager URL and install cores
+      - name: Add ESP8266 board manager URL
         run: |
+          arduino-cli config set board_manager.additional_urls https://arduino.esp8266.com/stable/package_esp8266com_index.json
           arduino-cli core update-index
+
+      # Install ESP8266 and AVR cores
+      - name: Install Arduino cores and libraries
+        run: |
+          arduino-cli core install esp8266:esp8266
           arduino-cli core install arduino:avr
           arduino-cli lib install ArduinoJson
 
-      # Compile Arduino Sketch (simulated)
-      - name: Compile Arduino Sketch (simulated)
+      # Compile Arduino Sketch
+      - name: Compile Arduino Sketch
         run: |
           mkdir -p build  # Ensure the build directory exists
           arduino-cli compile --fqbn esp8266:esp8266:nodemcuv2 --output-dir build TicTacToeHW/TicTacToeHW.ino
@@ -85,4 +91,3 @@ jobs:
         with:
           name: test-results-log
           path: test_results.log
-
