--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI Workflow
+name: CI Build/Test
 
 on:
   push:
@@ -13,81 +13,59 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout the repository
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      # Set up Python environment
-      - name: Set up Python 3.x
-        uses: actions/setup-python@v4
+      - name: Set up Python
+        uses: actions/setup-python@v3
         with:
           python-version: '3.x'
 
-      # Install PyInstaller
-      - name: Install PyInstaller
-        run: |
-          python -m pip install --upgrade pip
-          pip install pyinstaller
-
-      # Install Arduino CLI
-      - name: Set up Arduino CLI
+      # Set up Arduino CLI
+      - name: Set up Arduino
         run: |
           wget https://downloads.arduino.cc/arduino-cli/arduino-cli_latest_Linux_64bit.tar.gz
           tar -xvf arduino-cli_latest_Linux_64bit.tar.gz
           sudo mv arduino-cli /usr/local/bin/
           arduino-cli config init
 
-      # Add ESP8266 board manager URL and install cores
-      - name: Add ESP8266 board manager URL
+      - name: Add Arduino AVR Boards package
         run: |
-          arduino-cli config set board_manager.additional_urls https://arduino.esp8266.com/stable/package_esp8266com_index.json
           arduino-cli core update-index
-
-      # Install ESP8266 and AVR cores
-      - name: Install Arduino cores and libraries
-        run: |
-          arduino-cli core install esp8266:esp8266
           arduino-cli core install arduino:avr
-          arduino-cli lib install ArduinoJson
 
-      # Compile Arduino Sketch
-      - name: Compile Arduino Sketch
+      # Install and configure Doxygen
+      - name: Install Doxygen
         run: |
-          mkdir -p build  # Ensure the build directory exists
-          arduino-cli compile --fqbn esp8266:esp8266:nodemcuv2 --output-dir build TicTacToeHW/TicTacToeHW.ino
-
-      # Generate client executable from Python script
-      - name: Generate executable
+          sudo apt-get update
+          sudo apt-get install -y doxygen
+          
+      # Generate Doxygen Documentation
+      - name: Generate Doxygen Documentation
         run: |
-          mkdir -p dist  # Ensure the dist directory exists
-          pyinstaller --onefile Game.py
+          doxygen -g # Generates a default Doxyfile if none exists
+          sed -i 's|OUTPUT_DIRECTORY.*|OUTPUT_DIRECTORY = ./docs|' Doxyfile
+          sed -i 's|INPUT.*|INPUT = ./|' Doxyfile
+          sed -i 's|RECURSIVE.*|RECURSIVE = YES|' Doxyfile
+          doxygen Doxyfile
 
-      # Upload the generated executable as an artifact
-      - name: Upload executable as artifact
+      # Upload documentation as artifact
+      - name: Upload documentation as artifact
         uses: actions/upload-artifact@v3
         with:
-          name: compiled-executable
-          path: dist/Game  # This is the generated file from PyInstaller
+          name: docs_html
+          path: docs/html
 
-      # Download the artifact (the executable)
-      - name: Download compiled executable artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: compiled-executable
-
-      # Install pyserial
-      - name: Install pyserial
-        run: |
-          pip install pyserial
-
-      # Run PowerShell Script to execute tests
-      - name: Run PowerShell script to execute tests
-        run: |
-          pwsh ./Tests.ps1
-
-      # Upload the test log as an artifact
-      - name: Upload test results log
+      # Collect binaries as artifacts
+      - name: Upload binaries reports
         uses: actions/upload-artifact@v3
         with:
-          name: test-results-log
-          path: test_results.log
+          name: compiled-files
+          path: build/*.hex
+
+      # Collect test results as artifacts
+      - name: Upload test reports
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-reports
+          path: test-reports/results.xml
